--- a/gudang-pinter.html
+++ b/gudang-pinter.html
@@ -16,7 +16,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
-    <title>Kioson </title>
+    <title>Gudang Pintar </title>
     <link rel="shortcut icon" href="https://www.kioson.com//assets/kioson/favicon.ico" type="image/x-icon">
 
     <!-- font -->
