--- a/retail-kita.html
+++ b/retail-kita.html
@@ -16,7 +16,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
-    <title>Kioson </title>
+    <title>Retail Kita </title>
     <link rel="shortcut icon" href="https://www.kioson.com//assets/kioson/favicon.ico" type="image/x-icon">
 
     <!-- font -->
@@ -35,7 +35,7 @@
     <!-- custom css -->
     <link rel="stylesheet" href="./assets/css/style.css">
   </head>
-  <body class="bg-secondary-5">
+  <body class="bg-primary-5">
     <nav class="navbar navbar-expand-lg navbar-light bg-white p-0">
       <div class="container">
         <a class="navbar-brand" href="#">
@@ -100,10 +100,10 @@
 
     <main>
 
-      <section id="hero-kioson">
+      <section id="hero-rk">
         <div class="row">
-          <div class="col-lg-6 left">
-            <p class="color-primary mb-5">Tentang Kioson O2O</p>
+          <div class="col-lg-7 left">
+            <img src="./assets/images/retail-kita.png" class="mb-4" alt="">
             <h1 class="typo-title mb-4" style="line-height: 1.5;">
               Tumbuh Dengan Ekosistem  Pergudangan Digital Sampai Ke Wilayah Pedesaan
             </h1>
@@ -111,12 +111,13 @@
               Mendorong kolaborasi untuk menutup Digital GAP <br>melalui ekonomi digital sejak 2015
             </p>
             <div class="mt-5">
-              <a href="#" class="btn cta-primary btn-lg">
-                Download App
+              <a href="https:/retailkita.com" target="_blank" class="btn cta-primary btn-lg">
+                Retailkita.com
               </a>
+              <a href="#" class="color-primary ml-4">Menjadi Mitra Gudang</a>
             </div>
           </div>
-          <div class="col-lg-6 right">
+          <div class="col-lg-5 right">
             <iframe 
               width="100%" 
               height="316" 
@@ -133,10 +134,8 @@
         <div class="container pt-4 pb-3">
           <div class="row">
             <div class="col-lg-8 mx-auto text-center">
-              <p class="mb-5">Produk Digital yang kami distribusikan</p>
-              <img src="./assets/images/kioson-distribution-1.png" class="mb-3 img-fluid" alt="">
-              <img src="./assets/images/kioson-distribution-2.png" class="img-fluid" alt="">
-              <p class="mt-4">Dan banyak lagi </p>
+              <p class="mb-5">Produk FMCG & UMKM yang kami distribusikan</p>
+              <img src="./assets/images/rk-distribution-1.png" class="img-fluid" alt="">
             </div>
           </div>
         </div>
@@ -147,39 +146,39 @@
           <h1 class="text-2xl font-bold mb-5">Cara bergabung menjadi Mitra Sukses Kioson </h1>
           <div class="row">
             <div class="col-lg-3">
-              <div class="bg-mono-1 d-flex align-items-center justify-content-center text-4xl" style="height: 159px;">
-                📲
+              <div class="d-flex align-items-center justify-content-center text-4xl" style="height: 159px; background-color: #F89A1C;">
+                👋
               </div>
-              <h6 class="mb-0 font-bold my-4">Download Aplikasi Kioson</h6>
+              <h6 class="mb-0 font-bold my-4">Berpartner dengan RetailKita</h6>
               <p class="m-0">
-                Unduh aplikasi Kioson melalui hp android, pilih aplikasi playstore lalu ketik Kioson dan kemudian pilih tombol Install 
+                Brand atau bisnis kamu melakukan kerjasama, mengisi formulir yang telah ditentukan.
               </p>
             </div>
             <div class="col-lg-3">
-              <div class="bg-mono-1 d-flex align-items-center justify-content-center text-4xl" style="height: 159px;">
-                📩
+              <div class="d-flex align-items-center justify-content-center text-4xl" style="height: 159px; background-color: #FFBA5E;">
+                🚚
               </div>
-              <h6 class="mb-0 font-bold my-4">Daftarkan Diri</h6>
+              <h6 class="mb-0 font-bold my-4">Kirim Barang ke Gudang Pusat</h6>
               <p class="m-0">
-                Lengkapi semua informasi yang diminta untuk kepentingan verifikasi identitas mitra kami. Jika sudah lolos verifikasi Anda akan dapat melakukan berbagai transaksi 
+                Jika sudah selesai, proses pengiriman barang ke gudang besar yang tersedia untuk menjadi hub distribusi kepada mitra warung / gudang kecil kami.
               </p>
             </div>
             <div class="col-lg-3">
-              <div class="bg-mono-1 d-flex align-items-center justify-content-center text-4xl" style="height: 159px;">
-                💰
+              <div class="d-flex align-items-center justify-content-center text-4xl" style="height: 159px; background-color: #FFCD8A;">
+                🛒
               </div>
-              <h6 class="mb-0 font-bold my-4">Top Up Saldo </h6>
+              <h6 class="mb-0 font-bold my-4">Distribusi Produk ke Mitra RetailKita </h6>
               <p class="m-0">
-                Top up saldo Kioson sebagai modal untuk melakukan pembelian produk digital yang keuntunganya dapat langsung dirasakan saat menjual kepada konsumen 
+                Proses pengiriman / distribusi produk kepada gudang kecil untuk dijual secara langsung kepada konsumen dengan sistem OMS.
               </p>
             </div>
             <div class="col-lg-3">
-              <div class="bg-mono-1 d-flex align-items-center justify-content-center text-4xl" style="height: 159px;">
-                🎁
+              <div class="d-flex align-items-center justify-content-center text-4xl" style="height: 159px; background-color: #FFE0B6;">
+                📈
               </div>
-              <h6 class="mb-0 font-bold my-4">Mulai Berjualan</h6>
+              <h6 class="mb-0 font-bold my-4">Lihat Hasil Penjualan lewat WMS</h6>
               <p class="m-0">
-                Bila sudah melakukan top up, saat nya kamu berbisnis produk digital dari Kioson. 
+                Lihat penjualan produk Anda secara langsung, LIVE melalui dashboard yang telah kami sediakan untuk brand Anda.
               </p>
             </div>
           </div>
@@ -191,30 +190,31 @@
           <div class="row">
             <div class="col-lg-6">
               <p class="text-xxl" style="min-height: 150px;">
-                “Pakai Kioson memudahkan usaha saya, <br>
-                fiturnya banyak dari jualan pulsa, bayar <br>
-                listrik, bayar cicilan. Pakai aplikasinya <br>
-                juga gampang.”
+                “Peningkatan penjualan benar terjadi <br>
+                karena solusi distribusi dari RetailKita <br>
+                yang membuat warung menjadi rekan <br>
+                gudang sekalian berjualan produk kami”
               </p>
               <div class="d-inline-flex align-items-center mt-3">
                 <div class="avatar-circle"></div>
                 <div class="ml-3">
-                  <p class="m-0">Ibu Sumiati</p>
-                  <h6 class="m-0 font-bold">Mitra Kioson</h6>
+                  <p class="m-0">Amalia Cendana</p>
+                  <h6 class="m-0 font-bold">Brand Manager FMC</h6>
                 </div>
               </div>
             </div>
             <div class="col-lg-6">
               <p class="text-xxl" style="min-height: 150px;">
-                "Saya puas jualan pakai Kioson. Harga <br>
-                pulsanya murah, bisa bantu tetangga <br>
-                bayar tagihan PLN dan Tokopedia."
+                “Lokasi yang strategis dan banyak <br>
+                gudang kecil yang berjarak dekat dengan <br>
+                warehouse center. Sehingga membuat <br>
+                lebih mudah dimonitor”
               </p>
               <div class="d-inline-flex align-items-center mt-3">
                 <div class="avatar-circle"></div>
                 <div class="ml-3">
-                  <p class="m-0">Pak Julianto </p>
-                  <h6 class="m-0 font-bold">Mitra Kioson</h6>
+                  <p class="m-0">Cikal Mutiara </p>
+                  <h6 class="m-0 font-bold">Brand Manager FMC</h6>
                 </div>
               </div>
             </div>
@@ -228,14 +228,14 @@
             <div class="col-lg-8">
               <p class="mb-3">#MajuBersamaKIOSON</p>
               <h1 class="text 3xl font-bold mb-5">
-                Digitalisasi Warung Kamu <br>
-                Dengan Solusi Aplikasi <br>
-                Dari Kioson
+                Cara Baru Distribusikan <br>
+                Produk Dengan Mudah <br>
+                Ke Seluruh Indonesia
               </h1>
-              <a href="#" class="text-xl text-white">Download App <i class="far fa-arrow-alt-circle-right ml-2"></i></a>
+              <a href="https://retailkita.com" class="text-xl text-white">RetailKita.com <i class="far fa-arrow-alt-circle-right ml-2"></i></a>
             </div>
             <div class="col-lg-4">
-              <img src="./assets/images/kioson-started.png" class="img-fluid" alt="">
+              <img src="./assets/images/rk-started.png" class="img-fluid" alt="">
             </div>
           </div>
         </div>
