--- a/gudang-pintar.html
+++ b/gudang-pintar.html
@@ -100,31 +100,27 @@
 
     <main>
 
-      <section id="hero-kioson">
+      <section id="hero-gp">
         <div class="row">
-          <div class="col-lg-6 left">
-            <p class="color-primary mb-5">Tentang Kioson O2O</p>
+          <div class="col-lg-7 left">
+            <img src="./assets/images/gudang-pintar.png" class="mb-4" alt="">
             <h1 class="typo-title mb-4" style="line-height: 1.5;">
-              Tumbuh Dengan Ekosistem  Pergudangan Digital Sampai Ke Wilayah Pedesaan
+              Mengelola Orderan UMKM <br>
+              dari Menerima, Mengelola <br>
+              & Mengirim Orderan
             </h1>
             <p class="text-xl">
-              Mendorong kolaborasi untuk menutup Digital GAP <br>melalui ekonomi digital sejak 2015
+              GudangPintar membantu ribuan UMKM menjalankan <br>
+              bisnis lebih efektif dalam mengurus kebutuhan logistik
             </p>
             <div class="mt-5">
-              <a href="#" class="btn cta-primary btn-lg">
-                Download App
+              <a href="https://gudangpintar.id" target="_blank" class="btn cta-secondary btn-lg">
+                gudangpintar.id
               </a>
             </div>
           </div>
-          <div class="col-lg-6 right">
-            <iframe 
-              width="100%" 
-              height="316" 
-              src="https://www.youtube.com/embed/FneCI4_Xuls" 
-              title="YouTube video player" 
-              frameborder="0" 
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-              allowfullscreen></iframe>
+          <div class="col-lg-5 right">
+            <img src="./assets/images/img-hero-gp.png" class="img-fluid" alt="">
           </div>
         </div>
       </section>
@@ -133,10 +129,8 @@
         <div class="container pt-4 pb-3">
           <div class="row">
             <div class="col-lg-8 mx-auto text-center">
-              <p class="mb-5">Produk Digital yang kami distribusikan</p>
-              <img src="./assets/images/kioson-distribution-1.png" class="mb-3 img-fluid" alt="">
-              <img src="./assets/images/kioson-distribution-2.png" class="img-fluid" alt="">
-              <p class="mt-4">Dan banyak lagi </p>
+              <p class="mb-5">Mereka yang menggunakan GudangPintar</p>
+              <img src="./assets/images/gp-distribution-1.png" class="img-fluid" alt="">
             </div>
           </div>
         </div>
@@ -144,42 +138,44 @@
 
       <section id="join-kioson" class="py-5">
         <div class="container">
-          <h1 class="text-2xl font-bold mb-5">Cara bergabung menjadi Mitra Sukses Kioson </h1>
+          <h1 class="text-2xl font-bold mb-5">Mengapa menggunakan GudangPintar</h1>
           <div class="row">
             <div class="col-lg-3">
-              <div class="bg-mono-1 d-flex align-items-center justify-content-center text-4xl" style="height: 159px;">
-                📲
+              <div class="bg-mono-1 d-flex align-items-center justify-content-center text-4xl" style="height: 159px; background-color: #2584AD;">
+                🔗
               </div>
-              <h6 class="mb-0 font-bold my-4">Download Aplikasi Kioson</h6>
+              <h6 class="mb-0 font-bold my-4">Terintegrasi dengan platform besar</h6>
               <p class="m-0">
-                Unduh aplikasi Kioson melalui hp android, pilih aplikasi playstore lalu ketik Kioson dan kemudian pilih tombol Install 
+                Setiap orderan telah terintegrasi melalui berbagai platform online shop sehingga tim kami akan segera mendapatkan info live untuk melakukan proses fulfillment
               </p>
             </div>
             <div class="col-lg-3">
-              <div class="bg-mono-1 d-flex align-items-center justify-content-center text-4xl" style="height: 159px;">
-                📩
+              <div class="bg-mono-1 d-flex align-items-center justify-content-center text-4xl" style="height: 159px; background-color: #2F9CCB;">
+                🔍
               </div>
-              <h6 class="mb-0 font-bold my-4">Daftarkan Diri</h6>
+              <h6 class="mb-0 font-bold my-4">Serba Online & Monitor Dari Jauh</h6>
               <p class="m-0">
-                Lengkapi semua informasi yang diminta untuk kepentingan verifikasi identitas mitra kami. Jika sudah lolos verifikasi Anda akan dapat melakukan berbagai transaksi 
+                Dashboard WMS yang membantu seller, UMKM & pengguna jasa gudangPintar dapat mengetahui penjualan secara LIVE serta status barang kepada konsumen.
               </p>
             </div>
             <div class="col-lg-3">
-              <div class="bg-mono-1 d-flex align-items-center justify-content-center text-4xl" style="height: 159px;">
-                💰
+              <div class="bg-mono-1 d-flex align-items-center justify-content-center text-4xl" style="height: 159px; background-color: #30B2EB;">
+                💸
               </div>
-              <h6 class="mb-0 font-bold my-4">Top Up Saldo </h6>
+              <h6 class="mb-0 font-bold my-4">Lebih Murah & Nyaman</h6>
               <p class="m-0">
-                Top up saldo Kioson sebagai modal untuk melakukan pembelian produk digital yang keuntunganya dapat langsung dirasakan saat menjual kepada konsumen 
+                Berlokasi di banyak tempat khususnya wilayah tier 2-3 di Indonesia. Membantu memotong biaya kirim atau transporatasi kepada alamat konsumen. karena barang tersedia dibanyak lokasi yang lebih dekat dengan konsumen.
               </p>
             </div>
             <div class="col-lg-3">
-              <div class="bg-mono-1 d-flex align-items-center justify-content-center text-4xl" style="height: 159px;">
-                🎁
+              <div class="bg-mono-1 d-flex align-items-center justify-content-center text-4xl" style="height: 159px; background-color: #51BFEE;">
+                🎉
               </div>
-              <h6 class="mb-0 font-bold my-4">Mulai Berjualan</h6>
+              <h6 class="mb-0 font-bold my-4">Memenuhi Standar Kualitas Terbaik</h6>
               <p class="m-0">
-                Bila sudah melakukan top up, saat nya kamu berbisnis produk digital dari Kioson. 
+                warehouse GudangPintar dirancang
+                khusus untuk menyimpan produk Anda
+                agar dapat tetap baik sampai waktu nya dikirim kepada konsumen.
               </p>
             </div>
           </div>
@@ -191,30 +187,31 @@
           <div class="row">
             <div class="col-lg-6">
               <p class="text-xxl" style="min-height: 150px;">
-                “Pakai Kioson memudahkan usaha saya, <br>
-                fiturnya banyak dari jualan pulsa, bayar <br>
-                listrik, bayar cicilan. Pakai aplikasinya <br>
-                juga gampang.”
+                “Sekarang saya bisa fokus saja untuk <br>
+                mengikatkan produksi & kualitas barang <br>
+                karena segala urusan logistik sudah <br>
+                terbantu oleh gudangPintar”
               </p>
               <div class="d-inline-flex align-items-center mt-3">
                 <div class="avatar-circle"></div>
                 <div class="ml-3">
-                  <p class="m-0">Ibu Sumiati</p>
-                  <h6 class="m-0 font-bold">Mitra Kioson</h6>
+                  <p class="m-0">Mulia Agus Putra</p>
+                  <h6 class="m-0 font-bold">Seller Online</h6>
                 </div>
               </div>
             </div>
             <div class="col-lg-6">
               <p class="text-xxl" style="min-height: 150px;">
-                "Saya puas jualan pakai Kioson. Harga <br>
-                pulsanya murah, bisa bantu tetangga <br>
-                bayar tagihan PLN dan Tokopedia."
+                “Jadi lebih hemat kalau dihitung-hitung <br>
+                karena tidak perlu bayar admin sendiri, <br>
+                tinggal drop barang ke GudangPintar <br>
+                terus orderan dilayani secara langsung”
               </p>
               <div class="d-inline-flex align-items-center mt-3">
                 <div class="avatar-circle"></div>
                 <div class="ml-3">
-                  <p class="m-0">Pak Julianto </p>
-                  <h6 class="m-0 font-bold">Mitra Kioson</h6>
+                  <p class="m-0">Medina Safitri </p>
+                  <h6 class="m-0 font-bold">Seller Online</h6>
                 </div>
               </div>
             </div>
@@ -222,20 +219,20 @@
         </div>
       </section>
 
-      <section id="started">
+      <section id="started" class="gudang-pintar">
         <div class="box">
           <div class="row">
             <div class="col-lg-8">
               <p class="mb-3">#MajuBersamaKIOSON</p>
               <h1 class="text 3xl font-bold mb-5">
-                Digitalisasi Warung Kamu <br>
-                Dengan Solusi Aplikasi <br>
-                Dari Kioson
+                Saatnya Wujudkan Mimpi <br>
+                Untuk Bisa Piloting Bisnis <br>
+                Dimanapun Kamu Liburan
               </h1>
-              <a href="#" class="text-xl text-white">Download App <i class="far fa-arrow-alt-circle-right ml-2"></i></a>
+              <a href="https://gudangpintar.id" target="_blank" class="text-xl text-white">GudangPintar.id <i class="far fa-arrow-alt-circle-right ml-2"></i></a>
             </div>
             <div class="col-lg-4">
-              <img src="./assets/images/kioson-started.png" class="img-fluid" alt="">
+              <img src="./assets/images/gp-started.png" class="img-fluid" alt="">
             </div>
           </div>
         </div>
